--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div class="header__logo-box">
         <img src="./img/logo-white.png" alt="logo" class="header__logo" />
       </div>
+
       <div class="header__text-box">
         <h1 class="heading-primary">
           <span class="heading-primary--main">Outdoors</span>
@@ -35,6 +36,7 @@
             Exciting tours for adventurous people
           </h2>
         </div>
+
         <div class="row">
           <div class="col-1-of-2">
             <h3 class="heading-tertiary u-margin-bottom-small">
@@ -57,6 +59,7 @@
             </p>
             <a href="#" class="btn-text">Learn more &rarr;</a>
           </div>
+
           <div class="col-1-of-2">
             <div class="composition">
               <img
@@ -90,6 +93,7 @@
               </p>
             </div>
           </div>
+
           <div class="col-1-of-4">
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-compass"></i>
@@ -102,6 +106,7 @@
               </p>
             </div>
           </div>
+
           <div class="col-1-of-4">
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-map"></i>
@@ -114,6 +119,7 @@
               </p>
             </div>
           </div>
+
           <div class="col-1-of-4">
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-heart"></i>
@@ -133,6 +139,7 @@
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">Most popular tours</h2>
         </div>
+
         <div class="row">
           <div class="col-1-of-3">
             <div class="card">
@@ -164,6 +171,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front">
@@ -194,6 +202,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front">
@@ -228,6 +237,70 @@
 
         <div class="u-center-text u-margin-top-huge">
           <a href="#" class="btn btn--green">Discover all tours</a>
+        </div>
+      </section>
+
+      <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
+            Your browser does not support the video tag.
+          </video>
+        </div>
+
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">We make people genuinely happy</h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-8.jpg"
+                alt="Person on a tour"
+                class="story__img" />
+              <figcaption class="story__caption">Mary Smith</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary .u-margin-bottom-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
+                architecto adipisci est animi beatae. Magnam nisi laboriosam
+                dolor reprehenderit amet porro quidem voluptatibus velit quis
+                eius ipsa error.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-9.jpg"
+                alt="Person on a tour"
+                class="story__img" />
+              <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary .u-margin-bottom-small">
+                Wow! My life is completely different now
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
+                architecto adipisci est animi beatae. Magnam nisi laboriosam
+                dolor reprehenderit amet porro quidem voluptatibus velit quis
+                eius ipsa error.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
         </div>
       </section>
     </main>
