modify sotires and tours sections

--- a/index.html
+++ b/index.html
@@ -270,7 +270,8 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
                 architecto adipisci est animi beatae. Magnam nisi laboriosam
                 dolor reprehenderit amet porro quidem voluptatibus velit quis
-                eius ipsa error.
+                eius ipsa error. Alias aspernatur deserunt consectetur numquam
+                corporis eveniet quaerat dolor.
               </p>
             </div>
           </div>
@@ -293,7 +294,9 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
                 architecto adipisci est animi beatae. Magnam nisi laboriosam
                 dolor reprehenderit amet porro quidem voluptatibus velit quis
-                eius ipsa error.
+                eius ipsa error. Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Alias aspernatur deserunt consectetur numquam
+                corporis eveniet quaerat dolor.
               </p>
             </div>
           </div>
